# Theke

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analysis/: EXTRACTION_SCHEMA.md  FINDINGS.md  _audit_3sat.py  _audit_ard.py  _audit_sender.py  _bucket_3sat.py  _reenrich.py  _topics_dump.txt  _verify_heuristics.py  category-genre-split.md  classify-reviews-sender.md  classify-reviews-summary.md  desc_prefix.py  did-theke-analysis-help-you.md  download-hardening.md  duration_gap.csv  duration_gap.py  duration_gap_summary.txt  enrich-findings.md  enrich-improvements.md  extract.py  film_conv.py  lib.py  markers.py  match-notes.md  per_sender.py  topic_dur.py  validate.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  theke.example.json
tests/: test_classify.py  test_enrich.py  test_files.py  test_index.py  test_library.py  test_match.py  test_queue.py  test_scheduler.py  test_subtitle.py  test_theke.py
theke/: __init__.py  __main__.py  classify.py  core.py  enrich.py  files.py  index.py  match.py  queue.py  scheduler.py  subtitle.py  theke.py
