[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "theke"
version = "0.1.0"
description = "Self-hosted media manager that files German public-broadcaster content into Jellyfin"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
theke = "theke:main"

[tool.setuptools]
packages = ["theke"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
